# vim: set noexpandtab:
2013-05-24 Matt
	* Adding muon eta check for muons making sure trigger match only for 2.4 muons

2013-05-24 Anyes
	* Committing changes to TGuiUtils for PR plots
	
2013-05-19 Steve
	* Tagging SusyNtuple-00-00-56

2013-05-19 Steve
	* Added isSelectTau method for applying baseline tau selection
	* Added isTauBDT method for applying tau BDT cuts for each ID level
		* Used by isSelectTau and isSignalTau
	* Added TauID_none for applying no BDT selection (like container taus)

2013-05-14 Steve
	* Added dumpBaselineLeptons, dumpSignalLeptons, dumpBaselineJets, dumpSignalJets to SusyNtAna
	* Updated code for selecting both medium and tight taus
		* SusyNtAna now has m_mediumTaus and m_tightTaus
			* m_signalTaus will correspond to whichever tauID is specified to selectObjects
		* New SusyNtTools getSignalObjects and getSignalTaus methods which fill 
		  mediumTaus as well as tightTaus

2013-05-08 Steve
	* Updated default btag cut to MV1_80
	* Updated default btag SF to MV1_80
	* Updated lepton overlap dR as recommended by SUSY conveners
		* e-e overlap dR changed from 0.1 to 0.05
		* e-mu overlap dR changed from 0.1 to 0.01
	* Minor code cleanup
	* Tagging SusyNtuple-00-00-55

2013-05-07 Steve
	* Switch to usage of TFile.Open in buildSumwMap to properly handle xrootd file paths
	* Add nTrk to tau.print()

2013-05-02 Steve
	* Tagging SusyNtuple-00-00-54

2013-05-01 Steve
	* Updated TrilTrigLogic for handling extended muon eta cut
		* Using some preprocessor definitions to make code more compact
		* Matching code will require muons to be |eta| < 2.4 so that we can
		  use muons up to 2.5 in the analysis
	* Added softTerm, softTerm_etx, softTerm_ety to Susy Met class
		* These will replace the cellOut and softJet terms

2013-04-21 Anyes
	* Tweaks to TGuiUtils 

2013-04-18 Steve
	* Added const map getSumwMap method to SusyNtAna
	* Changed sumw map pointer to const in SusyNtTools getEventWeight

2013-04-17 Steve